added skills section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <h1 class="name">Muhammed Rajab</h1>
       <!-- Image -->
       <img src="https://placehold.co/600x400" alt="" class="pfp" />
+      <!-- Hobby -->
+      <p class="hobby">Writing programs as a hobby.</p>
       <!-- Navigation -->
       <nav class="navbar">
         <ul class="">
@@ -38,7 +40,42 @@
           </li>
         </ul>
       </nav>
-      <!-- Bio -->
+      <!-- About me-->
+      <section class="about-me">
+        <p class="">
+          <b><i>About Me</i></b>
+        </p>
+        <p class="">
+          Being a self-taught programmer, I enjoy working writing
+          <code>CLI</code>s, Backends, and other fun stuff in <code>GO</code>,
+          <code>Python</code> and <code>JS/TS</code>.
+        </p>
+        <p class="">
+          I prefer to keep things simple and minimalistic rather than
+          complicating life for myself as developer and for the user.
+        </p>
+
+        <!-- Skills -->
+        <p class="" style="margin-top: 1rem">
+          <b><i>I'm skillfull at</i></b>
+        </p>
+        <ul>
+          <li>
+            Building clean <code>CLI</code>s with minimal overhead in
+            <code>Go</code>.
+          </li>
+          <li>
+            Writing <code>scripts</code> to automate your workflow in
+            <code>GO</code>, <code>Python</code> or <code>JS/TS</code>.
+          </li>
+          <li>Building scalable backends for your web applications.</li>
+          <li>
+            Breaking down big problems in manageable chunks solving them
+            gracefully.
+          </li>
+          <li>Communicating with teams to reach the common goal.</li>
+        </ul>
+      </section>
     </header>
   </body>
 </html>
