commit before splitting stuff into different elements

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
           </li>
         </ul>
       </nav>
-      <!-- About me-->
+      <!-- Bio -->
       <section class="about-me">
+        <!-- About Me -->
         <p class="">
           <b><i>About Me</i></b>
         </p>
@@ -75,6 +76,11 @@
           </li>
           <li>Communicating with teams to reach the common goal.</li>
         </ul>
+
+        <!-- Projects -->
+        <p class="" style="margin-top: 1rem">
+          <b><i>My Works</i></b>
+        </p>
       </section>
     </header>
   </body>
