--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammed Rajab</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer type="module"></script>
+    <!-- <script src="./script.js" defer type="module"></script> -->
   </head>
   <body>
     <main class="header">
