added new project to index.html, and a new currently learning section to make it more full!

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="">
           Being a self-taught programmer, I enjoy working writing
           <code>CLI</code>s, Backends, and other fun stuff in <code>GO</code>,
-          <code>Python</code> and <code>JS/TS</code>.
+          <code>Python</code>, <code>JS/TS</code> and <code>C++</code>.
         </p>
         <p class="">
           I prefer to keep things simple and minimalistic rather than
@@ -63,20 +63,29 @@
           <b><i>I'm skillfull at</i></b>
         </p>
         <ul>
-          <li>
-            Building clean <code>CLI</code>s with minimal overhead in
-            <code>Go</code>.
-          </li>
-          <li>
-            Writing <code>scripts</code> to automate your workflow in
-            <code>GO</code>, <code>Python</code> or <code>JS/TS</code>.
-          </li>
+          <li>Building clean <code>CLI</code>s with minimal overhead.</li>
+          <li>Writing <code>scripts</code> to automate your workflow.</li>
           <li>Building scalable backends for your web applications.</li>
           <li>
             Breaking down big problems in manageable chunks solving them
             gracefully.
           </li>
           <li>Communicating with teams to reach the common goal.</li>
+        </ul>
+      </section>
+
+      <!-- Learning -->
+      <section class="learning">
+        <p class="" style="margin-top: 1rem">
+          <b><i>I'm currently learning</i></b>
+        </p>
+        <ul>
+          <li>
+            Graphics programming in OpenGL, as of 9<sup>th</sup> September 2024.
+          </li>
+          <li>
+            Low level programming in C++, as of 9<sup>th</sup> September 2024.
+          </li>
         </ul>
       </section>
 
@@ -99,7 +108,19 @@
             to encrypt and decrypt files or entire directories with ease.
           </p>
         </div>
-
+        <div class="project">
+          <p class="title">
+            [<a
+              href="https://github.com/Muhammed-Rajab/img2ascii.cpp/"
+              class=""
+              target="_blank"
+              >img2ascii.cpp</a
+            >]
+          </p>
+          <p class="description">
+            Convert your images🖼️ to ASCII art🎨 instantly with img2ascii.cpp!
+          </p>
+        </div>
         <hr style="margin: 10px 0px 10px 0px" />
       </section>
 
