implemented way to generate project cards dynamically

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammed Rajab</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- <script src="./script.js" defer type="module"></script> -->
+    <script src="./script.js" defer type="module"></script>
   </head>
   <body>
     <main class="header">
@@ -160,33 +160,7 @@
         <p class="" style="margin-top: 1rem">
           <b><i>My Works</i></b>
         </p>
-        <div class="project">
-          <p class="title">
-            [<a
-              href="https://github.com/Muhammed-Rajab/file-boy"
-              class=""
-              target="_blank"
-              >file-boy</a
-            >]
-          </p>
-          <p class="description">
-            A no-BS encryption/decryption CLI, made with golang. It allows you
-            to encrypt and decrypt files or entire directories with ease.
-          </p>
-        </div>
-        <div class="project">
-          <p class="title">
-            [<a
-              href="https://github.com/Muhammed-Rajab/img2ascii.cpp/"
-              class=""
-              target="_blank"
-              >img2ascii.cpp</a
-            >]
-          </p>
-          <p class="description">
-            Convert your images🖼️ to ASCII art🎨 instantly with img2ascii.cpp!
-          </p>
-        </div>
+        <div class="works-container"></div>
         <hr style="margin: 10px 0px 10px 0px" />
       </section>
 
