implemented way to select projects by category

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         <p class="" style="margin-top: 1rem">
           <b><i>My Works</i></b>
         </p>
+        <div class="works-categories"></div>
         <div class="works-container"></div>
         <hr style="margin: 10px 0px 10px 0px" />
       </section>
