made the title align center

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="image-container">
         <!-- <img src="/assets/images/ray.png" alt="" /> -->
       </div>
-      <p class="">
+      <p class="" style="text-align: center">
         Ray Marching, generated using
         <a
           href="https://github.com/Muhammed-Rajab/terrible-renderer.cpp"
