commit cause fucked up everything

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammed Rajab</title>
-    <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./script.js" defer type="module"></script>
   </head>
   <body>
-    <main class="header">
+    <!-- HEADER SECTION -->
+    <main class="section header">
       <!-- Name -->
       <h1 class="name">Muhammed Rajab</h1>
       <!-- Hobby -->
@@ -51,69 +53,70 @@
           </li>
         </ul>
       </nav>
-      <!-- Bio -->
-      <section class="about-me">
-        <!-- About Me -->
-        <p class="" style="margin-top: 1rem">
-          <b><i>About Me</i></b>
-        </p>
-        <p class="">
-          Being a self-taught programmer, I enjoy working writing
-          <code>CLI</code>s, Backends, and other fun stuff in <code>GO</code>,
-          <code>Python</code>, <code>JS/TS</code> and <code>C++</code>.
-        </p>
-        <p class="">
-          I prefer to keep things simple and minimalistic rather than
-          complicating life for myself as developer and for the user.
-        </p>
-      </section>
+    </main>
 
-      <!-- Skills -->
-      <section class="skills">
-        <p class="" style="margin-top: 1rem">
-          <b><i>I'm skillfull at</i></b>
-        </p>
-        <ul>
-          <li>Building clean <code>CLI</code>s with minimal overhead.</li>
-          <li>Writing <code>scripts</code> to automate your workflow.</li>
-          <li>Building scalable backends for your web applications.</li>
-          <li>
-            Breaking down big problems in manageable chunks solving them
-            gracefully.
-          </li>
-          <li>Communicating with teams to reach the common goal.</li>
-        </ul>
-      </section>
+    <!-- Bio -->
+    <section class="section about-me">
+      <!-- About Me -->
+      <p class="" style="margin-top: 1rem">
+        <b><i>About Me</i></b>
+      </p>
+      <p class="">
+        Being a self-taught programmer, I enjoy working writing
+        <code>CLI</code>s, Backends, and other fun stuff in <code>GO</code>,
+        <code>Python</code>, <code>JS/TS</code> and <code>C++</code>.
+      </p>
+      <p class="">
+        I prefer to keep things simple and minimalistic rather than complicating
+        life for myself as developer and for the user.
+      </p>
+    </section>
 
-      <!-- Learning -->
-      <section class="learning">
-        <p class="" style="margin-top: 1rem">
-          <b><i>I'm currently learning</i></b>
-        </p>
-        <ul>
-          <!-- <li>
+    <!-- Skills -->
+    <section class="section skills">
+      <p class="" style="margin-top: 1rem">
+        <b><i>I'm skillfull at</i></b>
+      </p>
+      <ul>
+        <li>Building clean <code>CLI</code>s with minimal overhead.</li>
+        <li>Writing <code>scripts</code> to automate your workflow.</li>
+        <li>Building scalable backends for your web applications.</li>
+        <li>
+          Breaking down big problems in manageable chunks solving them
+          gracefully.
+        </li>
+        <li>Communicating with teams to reach the common goal.</li>
+      </ul>
+    </section>
+
+    <!-- Learning -->
+    <section class="section learning">
+      <p class="" style="margin-top: 1rem">
+        <b><i>I'm currently learning</i></b>
+      </p>
+      <ul>
+        <!-- <li>
             Graphics programming in OpenGL, as of 9<sup>th</sup> September 2024.
           </li> -->
-          <li>
-            Low level programming in C++, as of 9<sup>th</sup> September 2024.
-          </li>
-        </ul>
-      </section>
+        <li>
+          Low level programming in C++, as of 9<sup>th</sup> September 2024.
+        </li>
+      </ul>
+    </section>
 
-      <!-- Works -->
-      <section class="works">
-        <p class="" style="margin-top: 1rem">
-          <b><i>My Works</i></b>
-        </p>
-        <div class="works-categories"></div>
-        <div class="works-container"></div>
-        <hr style="margin: 10px 0px 10px 0px" />
-      </section>
+    <!-- Works -->
+    <section class="section works">
+      <p class="" style="margin-top: 1rem">
+        <b><i>My Works</i></b>
+      </p>
+      <div class="works-categories"></div>
+      <div class="works-container"></div>
+      <hr style="margin: 10px 0px 10px 0px" />
+    </section>
 
-      <!-- Footer -->
-      <footer class="">
-        <span class="">© 2024 Muhammed Rajab</span>
-      </footer>
-    </main>
+    <!-- Footer -->
+    <footer class="section">
+      <span class="">© 2024 Muhammed Rajab</span>
+    </footer>
   </body>
 </html>
