commit before implementing a carousal to show case project snaps

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <!-- Hobby -->
       <p class="hobby">Writing programs as a hobby.</p>
       <!-- Image -->
+      <!-- ! EXAMPLE CAROUSAL -->
       <div class="image-container">
         <!-- <img src="/assets/images/ray.png" alt="" /> -->
       </div>
