added a silly light background image

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
       <!-- Hobby -->
       <p class="hobby">Writing programs as a hobby.</p>
       <!-- Image -->
-      <!-- ! EXAMPLE CAROUSAL -->
-      <div class="image-container">
-        <!-- <img src="/assets/images/ray.png" alt="" /> -->
-      </div>
-      <p class="" style="text-align: center">
+      <div class="image-container"></div>
+      <p class="image-text">
         Ray Marching, generated using
         <a
           href="https://github.com/Muhammed-Rajab/terrible-renderer.cpp"
