--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 
     <!-- Bio -->
     <section class="section about-me">
-      <!-- About Me -->
-      <p class="" style="margin-top: 1rem">
+      <p class="">
         <b><i>About Me</i></b>
       </p>
       <p class="">
@@ -72,7 +71,7 @@
 
     <!-- Skills -->
     <section class="section skills">
-      <p class="" style="margin-top: 1rem">
+      <p class="">
         <b><i>I'm skillfull at</i></b>
       </p>
       <ul>
@@ -89,7 +88,7 @@
 
     <!-- Learning -->
     <section class="section learning">
-      <p class="" style="margin-top: 1rem">
+      <p class="">
         <b><i>I'm currently learning</i></b>
       </p>
       <ul>
@@ -104,7 +103,7 @@
 
     <!-- Works -->
     <section class="section works">
-      <p class="" style="margin-top: 1rem">
+      <p class="">
         <b><i>My Works</i></b>
       </p>
       <div class="works-categories"></div>
@@ -113,7 +112,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="section">
+    <footer class="">
       <span class="">© 2024 Muhammed Rajab</span>
     </footer>
   </body>
