added two buttons. let's add event listeners to those shits

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
       </p>
       <div class="works-categories"></div>
       <div class="works-container"></div>
+      <div class="works-navigator">
+        <button class="prev-btn">prev</button>
+        <button class="next-btn">next</button>
+      </div>
       <hr style="margin: 10px 0px 10px 0px" />
     </section>
 
