--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       </p>
       <div class="works-categories"></div>
       <div class="works-container"></div>
+      <p class="works-pagination">pagination stuff</p>
       <div class="works-navigator">
         <button class="prev-btn">prev</button>
         <button class="next-btn">next</button>
