--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Writing programs as hobby" />
+    <meta
+      name="keywords"
+      content="programming,programmer,software developer, maths,2024,2023,2022,open to hire,c++,cpp,python,js,rust,go,typescript,javascript,go,lowlevel,coding"
+    />
+    <meta name="author" content="Muhammed Rajab" />
     <title>Muhammed Rajab</title>
-    <!-- <link rel="stylesheet" href="./style.css" /> -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./script.js" defer type="module"></script>
   </head>
