--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Muhammed Rajab | Portfolio" />
     <meta name="description" content="Writing programs as hobby" />
     <meta
       name="keywords"
       content="programming,programmer,software developer, maths,2024,2023,2022,open to hire,c++,cpp,python,js,rust,go,typescript,javascript,go,lowlevel,coding"
     />
     <meta name="author" content="Muhammed Rajab" />
-    <title>Muhammed Rajab</title>
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="1 days" />
+    <title>Muhammed Rajab | Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./script.js" defer type="module"></script>
   </head>
