--- a/index.html
+++ b/index.html
@@ -13,7 +13,49 @@
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
-    <meta name="revisit-after" content="1 days" />
+    <meta name="revisit-after" content="10 days" />
+    <!-- Favicon for all browsers -->
+    <link
+      rel="icon"
+      href="/assets/favicons/favicon.ico"
+      sizes="any"
+      type="image/x-icon"
+    />
+
+    <!-- Favicon for high resolution displays -->
+    <link
+      rel="icon"
+      href="/assets/favicons/favicon-32x32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="/assets/favicons/favicon-16x16.png"
+      sizes="16x16"
+      type="image/png"
+    />
+
+    <!-- Apple Touch Icon for iOS devices -->
+    <link rel="apple-touch-icon" href="/assets/favicons/apple-touch-icon.png" />
+
+    <!-- Android Chrome Icons -->
+    <link
+      rel="icon"
+      href="/assets/favicons/android-chrome-192x192.png"
+      sizes="192x192"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="/assets/favicons/android-chrome-512x512.png"
+      sizes="512x512"
+      type="image/png"
+    />
+
+    <!-- Web App Manifest for PWA (Progressive Web Apps) -->
+    <link rel="manifest" href="/assets/favicons/site.webmanifest" />
+
     <title>Muhammed Rajab | Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./script.js" defer type="module"></script>
