added both opengraph and twitter card tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Muhammed Rajab | Portfolio" />
+    <meta property="og:description" content="Writing programs as hobby" />
+    <meta property="og:image" content="./assets/meta/image.png" />
+    <meta property="og:url" content="https://muhammed-rajab.github.io/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Muhammed Rajab | Portfolio" />
+    <meta name="twitter:description" content="Writing programs as hobby" />
+    <meta name="twitter:image" content="./assets/meta/image.png" />
+
+    <!-- NORMAL STUFF -->
     <meta name="title" content="Muhammed Rajab | Portfolio" />
     <meta name="description" content="Writing programs as hobby" />
     <meta
