let's create a new branch and clean the projects section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -75,23 +75,14 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./script.js" defer type="module"></script>
   </head>
+
   <body>
     <!-- HEADER SECTION -->
     <main class="section header">
       <!-- Name -->
-      <h1 class="name">Muhammed Rajab</h1>
+      <h1 class="name">Rajab Kabeer</h1>
       <!-- Hobby -->
       <p class="hobby">Writing programs as a hobby.</p>
-      <!-- Image -->
-      <div class="image-container"></div>
-      <p class="image-text">
-        Ray Marching, generated using
-        <a
-          href="https://github.com/Muhammed-Rajab/terrible-renderer.cpp"
-          target="_blank"
-          >terrible-renderer.cpp</a
-        >
-      </p>
 
       <!-- Navigation -->
       <nav class="navbar">
@@ -99,11 +90,6 @@
           <li class="">
             [<a href="https://github.com/Muhammed-Rajab" target="_blank"
               >Github</a
-            >]
-          </li>
-          <li class="">
-            [<a href="https://www.linkedin.com/in/rajab-kabeer/" target="_blank"
-              >LinkedIn</a
             >]
           </li>
           <li class="">
@@ -121,51 +107,10 @@
     </main>
 
     <!-- Bio -->
-    <section class="section about-me">
-      <p class="">
-        <b><i>About Me</i></b>
-      </p>
-      <p class="">
-        Being a self-taught programmer, I enjoy working writing
-        <code>CLI</code>s, Backends, and other fun stuff in <code>GO</code>,
-        <code>Python</code>, <code>JS/TS</code> and <code>C++</code>.
-      </p>
-      <p class="">
-        I prefer to keep things simple and minimalistic rather than complicating
-        life for myself as developer and for the user.
-      </p>
-    </section>
-
-    <!-- Skills -->
-    <section class="section skills">
-      <p class="">
-        <b><i>I'm skillfull at</i></b>
-      </p>
-      <ul>
-        <li>Building clean <code>CLI</code>s with minimal overhead.</li>
-        <li>Writing <code>scripts</code> to automate your workflow.</li>
-        <li>Building scalable backends for your web applications.</li>
-        <li>
-          Breaking down big problems in manageable chunks solving them
-          gracefully.
-        </li>
-        <li>Communicating with teams to reach the common goal.</li>
-      </ul>
-    </section>
-
-    <!-- Learning -->
     <section class="section learning">
       <p class="">
-        <b><i>I'm currently learning</i></b>
+        <b><i>hi</i></b>
       </p>
-      <ul>
-        <!-- <li>
-            Graphics programming in OpenGL, as of 9<sup>th</sup> September 2024.
-          </li> -->
-        <li>
-          Low level programming in C++, as of 9<sup>th</sup> September 2024.
-        </li>
-      </ul>
     </section>
 
     <!-- Works -->
