removed some text

--- a/index.html
+++ b/index.html
@@ -134,21 +134,14 @@
       </nav>
     </header>
 
-    <!-- Bio -->
-    <section class="section learning">
-      <p class="">
-        <b><i>hi</i></b>
-      </p>
-    </section>
-
     <!-- Works -->
     <section class="section works">
       <p class="">
-        <b><i>My Works</i></b>
+        <b>Projects</b>
       </p>
       <div class="works-categories"></div>
       <div class="works-container"></div>
-      <p class="works-pagination">pagination stuff</p>
+      <p class="works-pagination"></p>
       <div class="works-navigator">
         <button class="prev-btn">prev</button>
         <button class="next-btn">next</button>
