fixed a bug in loading data to frontend  (set the first call to updateWorkContainer to currentCategory)

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <p class="works-pagination"></p>
         <button class="next-btn">next</button>
       </div>
-      <hr style="margin: 10px 0px 10px 0px" />
+      <!-- <hr style="margin: 10px 0px 10px 0px" /> -->
     </section>
 
     <!-- Footer -->
