almost done with adding blogs

--- a/index.html
+++ b/index.html
@@ -134,6 +134,38 @@
       </nav>
     </header>
 
+    <!-- Blogs -->
+    <section class="section blogs">
+      <p class="blogs-heading">
+        <b>Blogs</b>
+      </p>
+      <div class="blogs-container">
+        <!-- A max of 3 blogs is good enough  -->
+        <ul class="blogs-list">
+          <li class="blog">
+            <a href="sdsd" class="blog-link" target="_blank">
+              I Miss The Good Ol' Telnet Days - So I Built My Own Server
+            </a>
+          </li>
+
+          <li class="blog">
+            <a href="/sdfsdf" class="blog-link" target="_blank">
+              How I wrote a silly CHIP-8 emulator in C++
+            </a>
+          </li>
+
+          <li class="blog">
+            <a href="/sdkk" class="blog-link" target="_blank">
+              Ray Tracing isn't that hard - if you do it the right way!
+            </a>
+          </li>
+        </ul>
+      </div>
+      <p class="more-blogs">
+        <a href="/sdsdfd" target="_blank">Read More...</a>
+      </p>
+    </section>
+
     <!-- Works -->
     <section class="section works">
       <p class="">
@@ -146,7 +178,6 @@
         <p class="works-pagination"></p>
         <button class="next-btn">next</button>
       </div>
-      <!-- <hr style="margin: 10px 0px 10px 0px" /> -->
     </section>
 
     <!-- Footer -->
