still working on that ui. damn it looks sexy

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </ul>
       </div>
       <p class="more-blogs">
-        <a href="/sdsdfd" target="_blank">Read More...</a>
+        <a href="/sdsdfd" target="_blank">Click me for more, meine Liebe ;)</a>
       </p>
     </section>
 
