changed name in footer

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <!-- Footer -->
     <footer class="">
-      <span class="">© 2025 Muhammed Rajab</span>
+      <span class="">© 2025 Rajab Kabeer</span>
     </footer>
   </body>
 </html>
