--- a/index.html
+++ b/index.html
@@ -142,27 +142,11 @@
       <div class="blogs-container">
         <!-- A max of 3 blogs is good enough  -->
         <ul class="blogs-list">
-          <li class="blog">
-            <a href="sdsd" class="blog-link" target="_blank">
-              I Miss The Good Ol' Telnet Days - So I Built My Own Server
-            </a>
-          </li>
-
-          <li class="blog">
-            <a href="/sdfsdf" class="blog-link" target="_blank">
-              How I wrote a silly CHIP-8 emulator in C++
-            </a>
-          </li>
-
-          <li class="blog">
-            <a href="/sdkk" class="blog-link" target="_blank">
-              Ray Tracing isn't that hard - if you do it the right way!
-            </a>
-          </li>
+          no blogs for you, shibal!
         </ul>
       </div>
       <p class="more-blogs">
-        <a href="/sdsdfd" target="_blank"
+        <a href="/blogs" target="_blank"
           >Click me for more, <i>meine Liebe ;)</i></a
         >
       </p>
