removed unnecessary prefix from class names

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
       <p class="">
         <b>Projects</b>
       </p>
-      <div class="works-categories"></div>
-      <div class="works-container"></div>
-      <div class="works-navigator">
+      <div class="categories"></div>
+      <div class="container"></div>
+      <div class="navigator">
         <button class="prev-btn">prev</button>
-        <p class="works-pagination"></p>
+        <p class="pagination"></p>
         <button class="next-btn">next</button>
       </div>
     </section>
