order is emerging

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       </p>
     </section>
 
-    <!-- Works -->
-    <section class="section works">
+    <!-- Projects -->
+    <section class="section projects">
       <p class="">
         <b>Projects</b>
       </p>
