well, removed those nasty prefixes, lol

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
 
     <!-- Blogs -->
     <section class="section blogs">
-      <p class="blogs-heading">
+      <p class="heading">
         <b>Blogs</b>
       </p>
-      <div class="blogs-container">
+      <div class="container">
         <!-- A max of 3 blogs is good enough  -->
-        <ul class="blogs-list">
+        <ul class="list">
           no blogs for you, shibal!
         </ul>
       </div>
