--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
         <b>Blogs</b>
       </p>
       <div class="container">
-        <!-- A max of 3 blogs is good enough  -->
+        <!-- A max of 4 blogs is good enough  -->
         <ul class="list">
           no blogs for you, shibal!
         </ul>
       </div>
       <p class="more-blogs">
-        <a href="/blogs" target="_blank"
+        <a href="/blog" target="_blank"
           >Click me for more, <i>meine Liebe ;)</i></a
         >
       </p>
