changed the title, and the description. now gotta update the meta data.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Muhammed Rajab | Portfolio" />
-    <meta property="og:description" content="Writing programs as hobby" />
+    <meta property="og:title" content="Rajab Kabeer's Page!" />
+    <meta
+      property="og:description"
+      content="A journal of experiments, as I like to call it"
+    />
     <meta property="og:image" content="./assets/meta/image.png" />
     <meta property="og:url" content="https://muhammed-rajab.github.io/" />
     <meta property="og:type" content="website" />
@@ -22,7 +25,7 @@
     <meta name="description" content="Writing programs as hobby" />
     <meta
       name="keywords"
-      content="programming,programmer,software developer, maths,2024,2023,2022,open to hire,c++,cpp,python,js,rust,go,typescript,javascript,go,lowlevel,coding"
+      content="programming,programmer,software developer,maths,2024,2023,2022,open to hire,c++,cpp,python,js,rust,go,typescript,javascript,go,lowlevel,coding,music,guitar,music theory,coding,2025,reddit"
     />
     <meta name="author" content="Muhammed Rajab" />
     <meta name="robots" content="index, follow" />
@@ -71,7 +74,7 @@
     <!-- Web App Manifest for PWA (Progressive Web Apps) -->
     <link rel="manifest" href="/assets/favicons/site.webmanifest" />
 
-    <title>Muhammed Rajab | Portfolio</title>
+    <title>Rajab Kabeer's Journal!</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./script.js" defer type="module"></script>
   </head>
@@ -82,7 +85,7 @@
       <!-- Name -->
       <h1 class="name">Rajab Kabeer</h1>
       <!-- Hobby -->
-      <p class="hobby">Writing programs as a hobby.</p>
+      <p class="hobby">A journal of my experiments, as I like to call it.</p>
 
       <!-- Navigation -->
       <nav class="navbar" aria-label="Social Links">
