capitalized meine liebe

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
       <p class="more-blogs">
         <a href="/blog" target="_blank"
-          >Click me for more, <i>meine Liebe ;)</i></a
+          >Click me for more, <i>Meine Liebe ;)</i></a
         >
       </p>
     </section>
